# karst-vpn-desktop

./: .editorconfig  .gitattributes  .gitignore  .prettierignore  CLAUDE.md  README.md  eslint.config.js  index.html  justfile  package-lock.json  package.json  plan.md  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
.playwright-mcp/: page-2026-07-01T18-32-22-705Z.yml
icons/: icon.icns
original-source/: README.txt  standalone-readable.html
original-source/source/: app-logic.js  original-inner-template.html  text-before-doctype.txt  x-dc-template.html
scripts/: set-version.ps1  sync-version.ps1
src/: App.tsx  main.tsx  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_log.rs  dto.rs  error.rs  healthcheck.rs  lib.rs  lifecycle.rs  main.rs  scheduler.rs  title_bar.rs  tray.rs
src-tauri/src/commands/: connection.rs  logs.rs  mod.rs  servers.rs  settings.rs  subscriptions.rs
src-tauri/src/connection/: killswitch.rs  manager.rs  mod.rs  tunnel.rs
src-tauri/src/core/: mod.rs  process.rs  process_guard.rs
src-tauri/src/db/: mod.rs  schema.rs  servers.rs  settings.rs  subscriptions.rs
src-tauri/src/singbox/: config.rs  mod.rs  outbound.rs  process.rs  process_guard.rs  route_rules.rs  tun_cleanup.rs
src-tauri/src/subscription/: decode.rs  fetch.rs  mod.rs  refresh.rs
src-tauri/src/vless/: mod.rs  model.rs  parser.rs  xray_json.rs
src-tauri/src/xray/: config.rs  mod.rs  outbound.rs
src/app/: AppView.tsx  commands.ts  models.ts  presentation.ts  types.ts  useAppController.ts  useConnectionStatus.ts
src/features/connection/: ConnectionControls.tsx
src/features/diagnostics/: useLogs.ts
src/features/servers/: AddServerForm.tsx  ServerCatalog.tsx  ServerSheet.tsx  SubscriptionDetails.tsx  useServerCatalog.ts
src/features/settings/: SettingsSheet.tsx  usePreferences.ts
src/ui/: ErrorBoundary.tsx  LogsScreen.tsx  Pressable.tsx  Sidebar.tsx  Tooltip.tsx  theme.ts  useSheetDrag.ts
