[package]
name = "tauri_vite_react_ts_port"
version = "0.1.0"
description = "Tauri port of the supplied frontend"
authors = ["Generated"]
edition = "2021"

[lib]
name = "tauri_vite_react_ts_port_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "sync", "fs", "io-util"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
base64 = "0.22"
url = "2"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
