[package]
name = "karst-vpn"
version = "1.1.0"
description = "Karst VPN desktop application"
authors = ["Generated"]
edition = "2021"

[lib]
name = "karst_vpn_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net", "sync", "fs", "io-util"] }
reqwest = { version = "0.13", default-features = false, features = ["rustls", "stream"] }
futures-util = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }
base64 = "0.22"
url = "2"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
] }
